[gd_scene load_steps=13 format=3 uid="uid://clk1rpavw7sdw"]

[ext_resource type="Script" uid="uid://bttblhc7kpuef" path="res://scenes/player/player.gd" id="1_4kuee"]
[ext_resource type="Texture2D" uid="uid://tw8t38ns0seh" path="res://icon.svg" id="1_wr5hl"]
[ext_resource type="Resource" uid="uid://b5oooqtegddn3" path="res://scenes/player/resources/Alchemist.tres" id="2_524rm"]
[ext_resource type="PackedScene" uid="uid://clak1ljsk80a5" path="res://scenes/inventory.tscn" id="2_gfjak"]
[ext_resource type="PackedScene" uid="uid://c35v1or8j2glt" path="res://scenes/item_drop.tscn" id="2_tpg5x"]
[ext_resource type="Script" uid="uid://bv8fcys2imm1p" path="res://scenes/combat/HealthComponent.gd" id="6_c3xxp"]
[ext_resource type="Script" uid="uid://b4dv5nl24aqe" path="res://scenes/combat/Hitbox.gd" id="6_v42im"]
[ext_resource type="Script" uid="uid://c3d62vx8jttio" path="res://scenes/combat/Hurtbox.gd" id="7_npwbq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4kuee"]
radius = 65.0308

[sub_resource type="CircleShape2D" id="CircleShape2D_524rm"]
radius = 55.0364

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v42im"]
size = Vector2(127, 56)

[sub_resource type="CircleShape2D" id="CircleShape2D_npwbq"]
radius = 63.3482

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("label_name", "label_role")]
script = ExtResource("1_4kuee")
item_drop_scene = ExtResource("2_tpg5x")
label_name = NodePath("label_name")
label_role = NodePath("label_role")
class_config = ExtResource("2_524rm")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.982772, 0.163779, 0.816556, 1)
texture = ExtResource("1_wr5hl")

[node name="label_name" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="label_role" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4kuee")

[node name="Inventory" parent="." instance=ExtResource("2_gfjak")]

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(1, 1)
shape = SubResource("CircleShape2D_524rm")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="." groups=["DropSpawners"]]
spawn_path = NodePath(".")

[node name="MouseSprite" type="Sprite2D" parent="."]

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("6_c3xxp")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 33
collision_mask = 25
script = ExtResource("6_v42im")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(136, 2)
shape = SubResource("RectangleShape2D_v42im")

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
collision_layer = 9
script = ExtResource("7_npwbq")
health = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_npwbq")
